--- a/app/global.css
+++ b/app/global.css
@@ -903,9 +903,7 @@ html.dark {
     rgba(0, 0, 0, 0.2) -0.4px 0px 0,
     rgba(255, 255, 255, 0.9) 0.5px -0.5px 0;
   filter: drop-shadow(0 1px 4px rgb(255, 255, 255, 0.4));
-  box-shadow: 
-    inset 0px 1px 2px rgba(0, 0, 0, 0.1),
-    inset 0px -1px 1px rgba(255, 255, 255, 0.3);
+  box-shadow: none;
 }
 
 /* Ensure cursor is visible with high contrast */
@@ -920,8 +918,6 @@ html.dark {
     rgba(0, 0, 0, 0.2) -0.4px 0px 0,
     rgba(255, 255, 255, 0.9) 0.5px -0.5px 0;
   filter: drop-shadow(0 1px 4px rgb(255, 255, 255, 0.4));
-  box-shadow: 
-    inset 0px 1px 2px rgba(0, 0, 0, 0.1),
-    inset 0px -1px 1px rgba(255, 255, 255, 0.3);
+  box-shadow: none;
 }
 
